src/test/ui/issues/issue-12127.stderr
error[E0382]: use of moved value: `f`
  --> $DIR/issue-12127.rs:11:9
   |
LL |         f();
   |         - value moved here
LL |         f();
   |         ^ value used here after move
   |
   = note: move occurs because `f` has type `[closure@$DIR/issue-12127.rs:8:24: 8:41 x:std::boxed::Box<isize>]`, which does not implement the `Copy` trait

error: aborting due to previous error

For more information about this error, try `rustc --explain E0382`.
